Migrates to stackdriver trace API v2. (#112)